add post by category and add paginations

--- a/blog/templates/components/topnavbar.html
+++ b/blog/templates/components/topnavbar.html
@@ -2,7 +2,7 @@
 {% get_categoryes as categoryes %} 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Восьмой пример навигационной панели">
     <div class="container">
-      <a class="navbar-brand" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Блог Даниила</font></font></a>
+      <a class="navbar-brand" href="/"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Блог Даниила</font></font></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Переключить навигацию">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,13 +10,13 @@
       <div class="collapse navbar-collapse" id="navbarsExample07">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Главная</font></font></a>
+            <a class="nav-link active" aria-current="page" href="/"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Главная</font></font></a>
           </li>          
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Категории</font></font></a>
             <ul class="dropdown-menu">
               {% for category in categoryes %}
-                <li><a class="dropdown-item" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">{{category.name}}</font></font></a></li>
+                <li><a class="dropdown-item" href="/category/{{category.slug}}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">{{category.name}}</font></font></a></li>
               {% endfor %}
             </ul>
           </li>
