--- a/blog/templates/singlepost.html
+++ b/blog/templates/singlepost.html
@@ -9,7 +9,7 @@
       <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/">Главная</a></li>
-          <li class="breadcrumb-item"><a href="#">{{post.categories}}</a></li>
+          <li class="breadcrumb-item"><a href="/category/{{post.categories.slug}}">{{post.categories}}</a></li>
           <li class="breadcrumb-item active" aria-current="page">{{post.title}}</li>
           </ol>
       </nav>
