--- a/blog/templates/components/topnavbar.html
+++ b/blog/templates/components/topnavbar.html
@@ -24,8 +24,9 @@
             <a class="nav-link" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">О нас</font></font></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-disabled="true" href="#"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a>
+            <a class="nav-link " aria-disabled="true" href="{% url 'adminpost' %}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Админка</font></font></a>
           </li>
+          
         </ul>
         <form role="search">
           <input class="form-control" type="search" placeholder="Поиск" aria-label="Поиск">
