--- a/blog/templates/manager.html
+++ b/blog/templates/manager.html
@@ -29,7 +29,7 @@
         </a>
       </td>
       <td>
-        <a class="btn btn-danger" href="#"
+        <a class="btn btn-danger" href="{% url 'admindeletepost' post.id %}"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
             Удалить
         </a>
