finish login logout system and finish reset password for django

--- a/templates/createpost.html
+++ b/templates/createpost.html
@@ -6,7 +6,7 @@
     Создание поста
 {% endblock %}
 {% block content %}
-<h1>Создание нвого поста</h1>
+<h1>Создание нового поста</h1>
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }} 
