--- a/templates/components/topnavbar.html
+++ b/templates/components/topnavbar.html
@@ -26,11 +26,49 @@
           <li class="nav-item">
             <a class="nav-link " aria-disabled="true" href="{% url 'adminpost' %}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Админка</font></font></a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link " aria-disabled="true" href="{% url 'register' %}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Регистрация</font></font></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " aria-disabled="true" href="{% url 'login' %}"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Войти</font></font></a>
+          </li>
         </ul>
+        
         <form role="search">
           <input class="form-control" type="search" placeholder="Поиск" aria-label="Поиск">
         </form>
+
+        <div class="dropdown text-end"> 
+           <ul class="nav"> 
+            <li class="nav-item">
+              <a href="{% url 'login' %}" class="nav-link link-body-emphasis px-2">Вход</a>
+            </li> 
+            <li class="nav-item">
+              <a href="{% url 'register' %}" class="nav-link link-body-emphasis px-2">Регистрация</a>
+            </li> 
+          </ul>
+          <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> 
+            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle"> 
+          </a>
+
+          <ul class="dropdown-menu text-small" style=""> 
+            <li>
+              <a class="dropdown-item" href="#">New project...</a>
+            </li> 
+            <li>
+              <a class="dropdown-item" href="#">Settings</a>
+            </li> 
+            <li>
+              <a class="dropdown-item" href="#">Profile</a>
+            </li> 
+            <li>
+              <hr class="dropdown-divider">
+            </li> 
+            <li>
+              <a class="dropdown-item" href="#">Sign out</a>
+            </li> 
+          </ul> 
+        </div>
       </div>
     </div>
   </nav>
