--- a/templates/components/topnavbar.html
+++ b/templates/components/topnavbar.html
@@ -48,7 +48,7 @@
             </li> 
           </ul>
           <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false"> 
-            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle"> 
+            <img src="https://avatars.githubusercontent.com/u/207860647?v=4" alt="mdo" width="32" height="32" class="rounded-circle"> 
           </a>
 
           <ul class="dropdown-menu text-small" style=""> 
